// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pds author feed views fetches full author feeds for self (sorted, minimal myState). 1`] = `
Array [
  Object {
    "post": Object {
      "author": Object {
        "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
        "declaration": Object {
          "actorType": "app.bsky.system.actorUser",
          "cid": "cids(1)",
        },
        "did": "user(0)",
        "displayName": "ali",
        "handle": "alice.test",
        "viewer": Object {
          "muted": false,
        },
      },
      "cid": "cids(0)",
      "downvoteCount": 0,
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "record": Object {
        "$type": "app.bsky.feed.post",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "reply": Object {
          "parent": Object {
            "cid": "cids(3)",
            "uri": "record(2)",
          },
          "root": Object {
            "cid": "cids(2)",
            "uri": "record(1)",
          },
        },
        "text": "thanks bob",
      },
      "replyCount": 0,
      "repostCount": 0,
      "upvoteCount": 0,
      "uri": "record(0)",
      "viewer": Object {},
    },
    "reply": Object {
      "parent": Object {
        "author": Object {
          "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
          "declaration": Object {
            "actorType": "app.bsky.system.actorUser",
            "cid": "cids(1)",
          },
          "did": "user(1)",
          "displayName": "bobby",
          "handle": "bob.test",
          "viewer": Object {
            "muted": false,
          },
        },
        "cid": "cids(3)",
        "downvoteCount": 0,
        "embed": Object {
          "$type": "app.bsky.embed.images#presented",
          "images": Array [
            Object {
              "alt": "tests/image/fixtures/key-landscape-small.jpg",
              "fullsize": "https://pds.public.url/image/AiDXkxVbgBksxb1nfiRn1m6S4K8_mee6o8r-UGLNzOM/rs:fit:2000:2000:1:0/plain/bafkreigy5p3xxceipk2o6nqtnugpft26ol6yleqhboqziino7axvdngtci@jpeg",
              "thumb": "https://pds.public.url/image/JMPa2QXtezPZcznhuVZUVsk0-0lsADWNvhHoBZxNTic/rs:fill:1000:1000:1:0/plain/bafkreigy5p3xxceipk2o6nqtnugpft26ol6yleqhboqziino7axvdngtci@jpeg",
            },
          ],
        },
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "record": Object {
          "$type": "app.bsky.feed.post",
          "createdAt": "1970-01-01T00:00:00.000Z",
          "embed": Object {
            "$type": "app.bsky.embed.images",
            "images": Array [
              Object {
                "alt": "tests/image/fixtures/key-landscape-small.jpg",
                "image": Object {
                  "cid": "cids(4)",
                  "mimeType": "image/jpeg",
                },
              },
            ],
          },
          "reply": Object {
            "parent": Object {
              "cid": "cids(2)",
              "uri": "record(1)",
            },
            "root": Object {
              "cid": "cids(2)",
              "uri": "record(1)",
            },
          },
          "text": "hear that",
        },
        "replyCount": 1,
        "repostCount": 0,
        "upvoteCount": 0,
        "uri": "record(2)",
        "viewer": Object {},
      },
      "root": Object {
        "author": Object {
          "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
          "declaration": Object {
            "actorType": "app.bsky.system.actorUser",
            "cid": "cids(1)",
          },
          "did": "user(0)",
          "displayName": "ali",
          "handle": "alice.test",
          "viewer": Object {
            "muted": false,
          },
        },
        "cid": "cids(2)",
        "downvoteCount": 1,
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "record": Object {
          "$type": "app.bsky.feed.post",
          "createdAt": "1970-01-01T00:00:00.000Z",
          "text": "again",
        },
        "replyCount": 2,
        "repostCount": 1,
        "upvoteCount": 2,
        "uri": "record(1)",
        "viewer": Object {},
      },
    },
  },
  Object {
    "post": Object {
      "author": Object {
        "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
        "declaration": Object {
          "actorType": "app.bsky.system.actorUser",
          "cid": "cids(1)",
        },
        "did": "user(0)",
        "displayName": "ali",
        "handle": "alice.test",
        "viewer": Object {
          "muted": false,
        },
      },
      "cid": "cids(5)",
      "downvoteCount": 1,
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "record": Object {
        "$type": "app.bsky.feed.post",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "text": "yoohoo",
      },
      "replyCount": 0,
      "repostCount": 0,
      "upvoteCount": 1,
      "uri": "record(3)",
      "viewer": Object {},
    },
  },
  Object {
    "post": Object {
      "author": Object {
        "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
        "declaration": Object {
          "actorType": "app.bsky.system.actorUser",
          "cid": "cids(1)",
        },
        "did": "user(0)",
        "displayName": "ali",
        "handle": "alice.test",
        "viewer": Object {
          "muted": false,
        },
      },
      "cid": "cids(2)",
      "downvoteCount": 1,
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "record": Object {
        "$type": "app.bsky.feed.post",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "text": "again",
      },
      "replyCount": 2,
      "repostCount": 1,
      "upvoteCount": 2,
      "uri": "record(1)",
      "viewer": Object {},
    },
  },
  Object {
    "post": Object {
      "author": Object {
        "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
        "declaration": Object {
          "actorType": "app.bsky.system.actorUser",
          "cid": "cids(1)",
        },
        "did": "user(0)",
        "displayName": "ali",
        "handle": "alice.test",
        "viewer": Object {
          "muted": false,
        },
      },
      "cid": "cids(6)",
      "downvoteCount": 0,
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "record": Object {
        "$type": "app.bsky.feed.post",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "text": "hey there",
      },
      "replyCount": 0,
      "repostCount": 0,
      "upvoteCount": 0,
      "uri": "record(4)",
      "viewer": Object {},
    },
  },
]
`;

exports[`pds author feed views fetches full author feeds for self (sorted, minimal myState). 2`] = `
Array [
  Object {
    "post": Object {
      "author": Object {
        "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
        "declaration": Object {
          "actorType": "app.bsky.system.actorUser",
          "cid": "cids(1)",
        },
        "did": "user(0)",
        "displayName": "bobby",
        "handle": "bob.test",
        "viewer": Object {
          "muted": false,
        },
      },
      "cid": "cids(0)",
      "downvoteCount": 0,
      "embed": Object {
        "$type": "app.bsky.embed.images#presented",
        "images": Array [
          Object {
            "alt": "tests/image/fixtures/key-landscape-small.jpg",
            "fullsize": "https://pds.public.url/image/AiDXkxVbgBksxb1nfiRn1m6S4K8_mee6o8r-UGLNzOM/rs:fit:2000:2000:1:0/plain/bafkreigy5p3xxceipk2o6nqtnugpft26ol6yleqhboqziino7axvdngtci@jpeg",
            "thumb": "https://pds.public.url/image/JMPa2QXtezPZcznhuVZUVsk0-0lsADWNvhHoBZxNTic/rs:fill:1000:1000:1:0/plain/bafkreigy5p3xxceipk2o6nqtnugpft26ol6yleqhboqziino7axvdngtci@jpeg",
          },
        ],
      },
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "record": Object {
        "$type": "app.bsky.feed.post",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "embed": Object {
          "$type": "app.bsky.embed.images",
          "images": Array [
            Object {
              "alt": "tests/image/fixtures/key-landscape-small.jpg",
              "image": Object {
                "cid": "cids(2)",
                "mimeType": "image/jpeg",
              },
            },
          ],
        },
        "reply": Object {
          "parent": Object {
            "cid": "cids(3)",
            "uri": "record(1)",
          },
          "root": Object {
            "cid": "cids(3)",
            "uri": "record(1)",
          },
        },
        "text": "hear that",
      },
      "replyCount": 1,
      "repostCount": 0,
      "upvoteCount": 0,
      "uri": "record(0)",
      "viewer": Object {},
    },
    "reply": Object {
      "parent": Object {
        "author": Object {
          "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
          "declaration": Object {
            "actorType": "app.bsky.system.actorUser",
            "cid": "cids(1)",
          },
          "did": "user(1)",
          "displayName": "ali",
          "handle": "alice.test",
          "viewer": Object {
            "muted": false,
          },
        },
        "cid": "cids(3)",
        "downvoteCount": 1,
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "record": Object {
          "$type": "app.bsky.feed.post",
          "createdAt": "1970-01-01T00:00:00.000Z",
          "text": "again",
        },
        "replyCount": 2,
        "repostCount": 1,
        "upvoteCount": 2,
        "uri": "record(1)",
        "viewer": Object {
          "upvote": "record(2)",
        },
      },
      "root": Object {
        "author": Object {
          "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
          "declaration": Object {
            "actorType": "app.bsky.system.actorUser",
            "cid": "cids(1)",
          },
          "did": "user(1)",
          "displayName": "ali",
          "handle": "alice.test",
          "viewer": Object {
            "muted": false,
          },
        },
        "cid": "cids(3)",
        "downvoteCount": 1,
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "record": Object {
          "$type": "app.bsky.feed.post",
          "createdAt": "1970-01-01T00:00:00.000Z",
          "text": "again",
        },
        "replyCount": 2,
        "repostCount": 1,
        "upvoteCount": 2,
        "uri": "record(1)",
        "viewer": Object {
          "upvote": "record(2)",
        },
      },
    },
  },
  Object {
    "post": Object {
      "author": Object {
        "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
        "declaration": Object {
          "actorType": "app.bsky.system.actorUser",
          "cid": "cids(1)",
        },
        "did": "user(0)",
        "displayName": "bobby",
        "handle": "bob.test",
        "viewer": Object {
          "muted": false,
        },
      },
      "cid": "cids(4)",
      "downvoteCount": 0,
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "record": Object {
        "$type": "app.bsky.feed.post",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "text": "bobby boy here",
      },
      "replyCount": 0,
      "repostCount": 0,
      "upvoteCount": 0,
      "uri": "record(3)",
      "viewer": Object {},
    },
  },
  Object {
    "post": Object {
      "author": Object {
        "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
        "declaration": Object {
          "actorType": "app.bsky.system.actorUser",
          "cid": "cids(1)",
        },
        "did": "user(0)",
        "displayName": "bobby",
        "handle": "bob.test",
        "viewer": Object {
          "muted": false,
        },
      },
      "cid": "cids(5)",
      "downvoteCount": 0,
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "record": Object {
        "$type": "app.bsky.feed.post",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "text": "bob back at it again!",
      },
      "replyCount": 0,
      "repostCount": 0,
      "upvoteCount": 0,
      "uri": "record(4)",
      "viewer": Object {},
    },
  },
]
`;

exports[`pds author feed views fetches full author feeds for self (sorted, minimal myState). 3`] = `
Array [
  Object {
    "post": Object {
      "author": Object {
        "declaration": Object {
          "actorType": "app.bsky.system.actorUser",
          "cid": "cids(1)",
        },
        "did": "user(0)",
        "handle": "dan.test",
        "viewer": Object {
          "muted": false,
        },
      },
      "cid": "cids(0)",
      "downvoteCount": 0,
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "record": Object {
        "$type": "app.bsky.feed.post",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "entities": Array [
          Object {
            "index": Object {
              "end": 18,
              "start": 0,
            },
            "type": "mention",
            "value": "user(1)",
          },
        ],
        "text": "@alice.bluesky.xyz is the best",
      },
      "replyCount": 0,
      "repostCount": 1,
      "upvoteCount": 0,
      "uri": "record(0)",
      "viewer": Object {
        "repost": "record(1)",
      },
    },
    "reason": Object {
      "$type": "app.bsky.feed.feedViewPost#reasonRepost",
      "by": Object {
        "declaration": Object {
          "actorType": "app.bsky.system.actorUser",
          "cid": "cids(1)",
        },
        "did": "user(2)",
        "handle": "carol.test",
        "viewer": Object {
          "muted": false,
        },
      },
      "indexedAt": "1970-01-01T00:00:00.000Z",
    },
  },
  Object {
    "post": Object {
      "author": Object {
        "declaration": Object {
          "actorType": "app.bsky.system.actorUser",
          "cid": "cids(1)",
        },
        "did": "user(2)",
        "handle": "carol.test",
        "viewer": Object {
          "muted": false,
        },
      },
      "cid": "cids(2)",
      "downvoteCount": 0,
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "record": Object {
        "$type": "app.bsky.feed.post",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "reply": Object {
          "parent": Object {
            "cid": "cids(3)",
            "uri": "record(3)",
          },
          "root": Object {
            "cid": "cids(3)",
            "uri": "record(3)",
          },
        },
        "text": "of course",
      },
      "replyCount": 0,
      "repostCount": 0,
      "upvoteCount": 0,
      "uri": "record(2)",
      "viewer": Object {},
    },
    "reply": Object {
      "parent": Object {
        "author": Object {
          "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
          "declaration": Object {
            "actorType": "app.bsky.system.actorUser",
            "cid": "cids(1)",
          },
          "did": "user(1)",
          "displayName": "ali",
          "handle": "alice.test",
          "viewer": Object {
            "muted": false,
          },
        },
        "cid": "cids(3)",
        "downvoteCount": 1,
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "record": Object {
          "$type": "app.bsky.feed.post",
          "createdAt": "1970-01-01T00:00:00.000Z",
          "text": "again",
        },
        "replyCount": 2,
        "repostCount": 1,
        "upvoteCount": 2,
        "uri": "record(3)",
        "viewer": Object {
          "downvote": "record(4)",
        },
      },
      "root": Object {
        "author": Object {
          "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
          "declaration": Object {
            "actorType": "app.bsky.system.actorUser",
            "cid": "cids(1)",
          },
          "did": "user(1)",
          "displayName": "ali",
          "handle": "alice.test",
          "viewer": Object {
            "muted": false,
          },
        },
        "cid": "cids(3)",
        "downvoteCount": 1,
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "record": Object {
          "$type": "app.bsky.feed.post",
          "createdAt": "1970-01-01T00:00:00.000Z",
          "text": "again",
        },
        "replyCount": 2,
        "repostCount": 1,
        "upvoteCount": 2,
        "uri": "record(3)",
        "viewer": Object {
          "downvote": "record(4)",
        },
      },
    },
  },
  Object {
    "post": Object {
      "author": Object {
        "declaration": Object {
          "actorType": "app.bsky.system.actorUser",
          "cid": "cids(1)",
        },
        "did": "user(2)",
        "handle": "carol.test",
        "viewer": Object {
          "muted": false,
        },
      },
      "cid": "cids(4)",
      "downvoteCount": 0,
      "embed": Object {
        "$type": "app.bsky.embed.images#presented",
        "images": Array [
          Object {
            "alt": "tests/image/fixtures/key-landscape-small.jpg",
            "fullsize": "https://pds.public.url/image/AiDXkxVbgBksxb1nfiRn1m6S4K8_mee6o8r-UGLNzOM/rs:fit:2000:2000:1:0/plain/bafkreigy5p3xxceipk2o6nqtnugpft26ol6yleqhboqziino7axvdngtci@jpeg",
            "thumb": "https://pds.public.url/image/JMPa2QXtezPZcznhuVZUVsk0-0lsADWNvhHoBZxNTic/rs:fill:1000:1000:1:0/plain/bafkreigy5p3xxceipk2o6nqtnugpft26ol6yleqhboqziino7axvdngtci@jpeg",
          },
          Object {
            "alt": "tests/image/fixtures/key-portrait-small.jpg",
            "fullsize": "https://pds.public.url/image/0BeTMjG5WhsX5FmdKno6ynP3FQIxIm1h_5OKkUX5sAE/rs:fit:2000:2000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
            "thumb": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
          },
        ],
      },
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "record": Object {
        "$type": "app.bsky.feed.post",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "embed": Object {
          "$type": "app.bsky.embed.images",
          "images": Array [
            Object {
              "alt": "tests/image/fixtures/key-landscape-small.jpg",
              "image": Object {
                "cid": "cids(5)",
                "mimeType": "image/jpeg",
              },
            },
            Object {
              "alt": "tests/image/fixtures/key-portrait-small.jpg",
              "image": Object {
                "cid": "cids(6)",
                "mimeType": "image/jpeg",
              },
            },
          ],
        },
        "text": "hi im carol",
      },
      "replyCount": 0,
      "repostCount": 0,
      "upvoteCount": 2,
      "uri": "record(5)",
      "viewer": Object {},
    },
  },
]
`;

exports[`pds author feed views fetches full author feeds for self (sorted, minimal myState). 4`] = `
Array [
  Object {
    "post": Object {
      "author": Object {
        "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
        "declaration": Object {
          "actorType": "app.bsky.system.actorUser",
          "cid": "cids(1)",
        },
        "did": "user(0)",
        "displayName": "ali",
        "handle": "alice.test",
        "viewer": Object {
          "muted": false,
        },
      },
      "cid": "cids(0)",
      "downvoteCount": 1,
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "record": Object {
        "$type": "app.bsky.feed.post",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "text": "again",
      },
      "replyCount": 2,
      "repostCount": 1,
      "upvoteCount": 2,
      "uri": "record(0)",
      "viewer": Object {
        "repost": "record(1)",
        "upvote": "record(2)",
      },
    },
    "reason": Object {
      "$type": "app.bsky.feed.feedViewPost#reasonRepost",
      "by": Object {
        "declaration": Object {
          "actorType": "app.bsky.system.actorUser",
          "cid": "cids(1)",
        },
        "did": "user(1)",
        "handle": "dan.test",
        "viewer": Object {
          "muted": false,
        },
      },
      "indexedAt": "1970-01-01T00:00:00.000Z",
    },
  },
  Object {
    "post": Object {
      "author": Object {
        "declaration": Object {
          "actorType": "app.bsky.system.actorUser",
          "cid": "cids(1)",
        },
        "did": "user(1)",
        "handle": "dan.test",
        "viewer": Object {
          "muted": false,
        },
      },
      "cid": "cids(2)",
      "downvoteCount": 0,
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "record": Object {
        "$type": "app.bsky.feed.post",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "entities": Array [
          Object {
            "index": Object {
              "end": 18,
              "start": 0,
            },
            "type": "mention",
            "value": "user(0)",
          },
        ],
        "text": "@alice.bluesky.xyz is the best",
      },
      "replyCount": 0,
      "repostCount": 1,
      "upvoteCount": 0,
      "uri": "record(3)",
      "viewer": Object {},
    },
  },
  Object {
    "post": Object {
      "author": Object {
        "declaration": Object {
          "actorType": "app.bsky.system.actorUser",
          "cid": "cids(1)",
        },
        "did": "user(1)",
        "handle": "dan.test",
        "viewer": Object {
          "muted": false,
        },
      },
      "cid": "cids(3)",
      "downvoteCount": 0,
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "record": Object {
        "$type": "app.bsky.feed.post",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "text": "dan here!",
      },
      "replyCount": 0,
      "repostCount": 0,
      "upvoteCount": 0,
      "uri": "record(4)",
      "viewer": Object {},
    },
  },
]
`;

exports[`pds author feed views omits reposts from muted users. 1`] = `
Array [
  Object {
    "post": Object {
      "author": Object {
        "declaration": Object {
          "actorType": "app.bsky.system.actorUser",
          "cid": "cids(1)",
        },
        "did": "user(0)",
        "handle": "dan.test",
        "viewer": Object {
          "muted": true,
        },
      },
      "cid": "cids(0)",
      "downvoteCount": 0,
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "record": Object {
        "$type": "app.bsky.feed.post",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "entities": Array [
          Object {
            "index": Object {
              "end": 18,
              "start": 0,
            },
            "type": "mention",
            "value": "user(1)",
          },
        ],
        "text": "@alice.bluesky.xyz is the best",
      },
      "replyCount": 0,
      "repostCount": 1,
      "upvoteCount": 0,
      "uri": "record(0)",
      "viewer": Object {},
    },
  },
  Object {
    "post": Object {
      "author": Object {
        "declaration": Object {
          "actorType": "app.bsky.system.actorUser",
          "cid": "cids(1)",
        },
        "did": "user(0)",
        "handle": "dan.test",
        "viewer": Object {
          "muted": true,
        },
      },
      "cid": "cids(2)",
      "downvoteCount": 0,
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "record": Object {
        "$type": "app.bsky.feed.post",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "text": "dan here!",
      },
      "replyCount": 0,
      "repostCount": 0,
      "upvoteCount": 0,
      "uri": "record(1)",
      "viewer": Object {},
    },
  },
]
`;

exports[`pds author feed views reflects fetching user's state in the feed. 1`] = `
Array [
  Object {
    "post": Object {
      "author": Object {
        "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
        "declaration": Object {
          "actorType": "app.bsky.system.actorUser",
          "cid": "cids(1)",
        },
        "did": "user(0)",
        "displayName": "ali",
        "handle": "alice.test",
        "viewer": Object {
          "muted": false,
        },
      },
      "cid": "cids(0)",
      "downvoteCount": 0,
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "record": Object {
        "$type": "app.bsky.feed.post",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "reply": Object {
          "parent": Object {
            "cid": "cids(3)",
            "uri": "record(2)",
          },
          "root": Object {
            "cid": "cids(2)",
            "uri": "record(1)",
          },
        },
        "text": "thanks bob",
      },
      "replyCount": 0,
      "repostCount": 0,
      "upvoteCount": 0,
      "uri": "record(0)",
      "viewer": Object {},
    },
    "reply": Object {
      "parent": Object {
        "author": Object {
          "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
          "declaration": Object {
            "actorType": "app.bsky.system.actorUser",
            "cid": "cids(1)",
          },
          "did": "user(1)",
          "displayName": "bobby",
          "handle": "bob.test",
          "viewer": Object {
            "muted": false,
          },
        },
        "cid": "cids(3)",
        "downvoteCount": 0,
        "embed": Object {
          "$type": "app.bsky.embed.images#presented",
          "images": Array [
            Object {
              "alt": "tests/image/fixtures/key-landscape-small.jpg",
              "fullsize": "https://pds.public.url/image/AiDXkxVbgBksxb1nfiRn1m6S4K8_mee6o8r-UGLNzOM/rs:fit:2000:2000:1:0/plain/bafkreigy5p3xxceipk2o6nqtnugpft26ol6yleqhboqziino7axvdngtci@jpeg",
              "thumb": "https://pds.public.url/image/JMPa2QXtezPZcznhuVZUVsk0-0lsADWNvhHoBZxNTic/rs:fill:1000:1000:1:0/plain/bafkreigy5p3xxceipk2o6nqtnugpft26ol6yleqhboqziino7axvdngtci@jpeg",
            },
          ],
        },
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "record": Object {
          "$type": "app.bsky.feed.post",
          "createdAt": "1970-01-01T00:00:00.000Z",
          "embed": Object {
            "$type": "app.bsky.embed.images",
            "images": Array [
              Object {
                "alt": "tests/image/fixtures/key-landscape-small.jpg",
                "image": Object {
                  "cid": "cids(4)",
                  "mimeType": "image/jpeg",
                },
              },
            ],
          },
          "reply": Object {
            "parent": Object {
              "cid": "cids(2)",
              "uri": "record(1)",
            },
            "root": Object {
              "cid": "cids(2)",
              "uri": "record(1)",
            },
          },
          "text": "hear that",
        },
        "replyCount": 1,
        "repostCount": 0,
        "upvoteCount": 0,
        "uri": "record(2)",
        "viewer": Object {},
      },
      "root": Object {
        "author": Object {
          "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
          "declaration": Object {
            "actorType": "app.bsky.system.actorUser",
            "cid": "cids(1)",
          },
          "did": "user(0)",
          "displayName": "ali",
          "handle": "alice.test",
          "viewer": Object {
            "muted": false,
          },
        },
        "cid": "cids(2)",
        "downvoteCount": 1,
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "record": Object {
          "$type": "app.bsky.feed.post",
          "createdAt": "1970-01-01T00:00:00.000Z",
          "text": "again",
        },
        "replyCount": 2,
        "repostCount": 1,
        "upvoteCount": 2,
        "uri": "record(1)",
        "viewer": Object {
          "downvote": "record(3)",
        },
      },
    },
  },
  Object {
    "post": Object {
      "author": Object {
        "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
        "declaration": Object {
          "actorType": "app.bsky.system.actorUser",
          "cid": "cids(1)",
        },
        "did": "user(0)",
        "displayName": "ali",
        "handle": "alice.test",
        "viewer": Object {
          "muted": false,
        },
      },
      "cid": "cids(5)",
      "downvoteCount": 1,
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "record": Object {
        "$type": "app.bsky.feed.post",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "text": "yoohoo",
      },
      "replyCount": 0,
      "repostCount": 0,
      "upvoteCount": 1,
      "uri": "record(4)",
      "viewer": Object {
        "upvote": "record(5)",
      },
    },
  },
  Object {
    "post": Object {
      "author": Object {
        "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
        "declaration": Object {
          "actorType": "app.bsky.system.actorUser",
          "cid": "cids(1)",
        },
        "did": "user(0)",
        "displayName": "ali",
        "handle": "alice.test",
        "viewer": Object {
          "muted": false,
        },
      },
      "cid": "cids(2)",
      "downvoteCount": 1,
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "record": Object {
        "$type": "app.bsky.feed.post",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "text": "again",
      },
      "replyCount": 2,
      "repostCount": 1,
      "upvoteCount": 2,
      "uri": "record(1)",
      "viewer": Object {
        "downvote": "record(3)",
      },
    },
  },
  Object {
    "post": Object {
      "author": Object {
        "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
        "declaration": Object {
          "actorType": "app.bsky.system.actorUser",
          "cid": "cids(1)",
        },
        "did": "user(0)",
        "displayName": "ali",
        "handle": "alice.test",
        "viewer": Object {
          "muted": false,
        },
      },
      "cid": "cids(6)",
      "downvoteCount": 0,
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "record": Object {
        "$type": "app.bsky.feed.post",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "text": "hey there",
      },
      "replyCount": 0,
      "repostCount": 0,
      "upvoteCount": 0,
      "uri": "record(6)",
      "viewer": Object {},
    },
  },
]
`;
